--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=paypal-user-service
+
+server.port =${port:8081}
+spring.datasource.url=jdbc:mysql://localhost:3306/paypal
+spring.datasource.username=${dev_user:root}
+spring.datasource.password=${dev_pass:1234}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+logging.level.org.springframework.security=DEBUG
