added wallet function

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/paypal
 spring.datasource.username=${dev_user:root}
 spring.datasource.password=${dev_pass:1234}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 
 logging.level.org.springframework.security=DEBUG
+
+wallet.service.url= http://localhost:8086
+logging.level.com.paypal.paypal_user_service=DEBUG
+
+spring.jpa.hibernate.ddl-auto=update
+
