updated unique id

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ logging.level.com.paypal.paypal_user_service=DEBUG
 
 spring.jpa.hibernate.ddl-auto=update
 
+feign.client.config.default.retryer= feign.Retryer$NeverRetry
+
