added docker file

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,9 +1,9 @@
 spring.application.name=paypal-user-service
 
-server.port =${port:8079}
-spring.datasource.url=jdbc:mysql://localhost:3306/paypal
-spring.datasource.username=${dev_user:root}
-spring.datasource.password=${dev_pass:1234}
+server.port =${port:8081}
+spring.datasource.url=jdbc:mysql://sql102.infinityfree.com:3306/if0_40228713_user_profile
+spring.datasource.username=${dev_user:if0_40228713}
+spring.datasource.password=${dev_pass:vv4a1DNhwVbF}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
