updated docker file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=${dev_pass:1234}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-
+#server.servlet.context-path=/paypal
 logging.level.org.springframework.security=DEBUG
 
 wallet.service.url= http://localhost:8086
