--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 feign.client.config.default.retryer= feign.Retryer$NeverRetry
 
+spring.datasource.hikari.initializationFailTimeout=60000
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.maximumPoolSize=5
+
+
