--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 logging.level.org.springframework.security=DEBUG
 
 wallet.service.url= http://localhost:8086
-logging.level.com.paypal.paypal_user_service=DEBUG
+#logging.level.com.paypal.paypal_user_service=DEBUG
 
 spring.jpa.hibernate.ddl-auto=update
 
